# sovoh-project

./: README.md
assignment1/: .Makefile.swp  CMakeLists-child.txt  CMakeLists.txt  Makefile  README.md  as1.c  child  child.c  childlog.txt  execmain.c  logging.h  main  main.c  morse.c  morse.h  parentlog.txt
assignment1/Example/: CMakeLists.txt
assignment1/testbench/: Assignment1-exec  Makefile  as1_mockup  as1_mockup.c  as1_testbench  as1_testbench.c
